// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildSyncOutputs golden files: examples/nextjs > produces the expected AGENTS.md content for nextjs 1`] = `
"# guardrail-example-nextjs

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

## Architecture & conventions

# Guardrail Example — Next.js

This fixture repo intentionally plants one violation of \`no-cross-feature-imports\`
(\`src/features/billing/index.ts\` imports directly from \`src/features/auth/session.ts\`)
so \`guardrail check\` has something real to catch. It also declares \`moment\` as a
forbidden dependency (it's listed in package.json) to demonstrate the
forbidden-dependency checker.

## Enforced rules

These rules are checked deterministically by \`guardrail check\` — zero LLM calls, zero network access. A violation of any \`error\`/\`critical\` rule fails CI.

**critical**
- \`no-secrets\` (secret-scan) — No hardcoded credentials or API keys anywhere in the repo.

**error**
- \`no-cross-feature-imports\` (import-boundary) — Features must not import from each other directly; share code through packages/shared instead.

**warning**
- \`no-moment\` (forbidden-dependency) — Use date-fns instead of the deprecated moment.js.

"
`;

exports[`buildSyncOutputs golden files: examples/nextjs > produces the expected CLAUDE.md content for nextjs 1`] = `
"# guardrail-example-nextjs

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

## Architecture & conventions

# Guardrail Example — Next.js

This fixture repo intentionally plants one violation of \`no-cross-feature-imports\`
(\`src/features/billing/index.ts\` imports directly from \`src/features/auth/session.ts\`)
so \`guardrail check\` has something real to catch. It also declares \`moment\` as a
forbidden dependency (it's listed in package.json) to demonstrate the
forbidden-dependency checker.

## Enforced rules

These rules are checked deterministically by \`guardrail check\` — zero LLM calls, zero network access. A violation of any \`error\`/\`critical\` rule fails CI.

**critical**
- \`no-secrets\` (secret-scan) — No hardcoded credentials or API keys anywhere in the repo.

**error**
- \`no-cross-feature-imports\` (import-boundary) — Features must not import from each other directly; share code through packages/shared instead.

**warning**
- \`no-moment\` (forbidden-dependency) — Use date-fns instead of the deprecated moment.js.

"
`;

exports[`buildSyncOutputs golden files: examples/nextjs > produces the expected copilot-instructions.md content for nextjs 1`] = `
"# guardrail-example-nextjs

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

## Architecture & conventions

# Guardrail Example — Next.js

This fixture repo intentionally plants one violation of \`no-cross-feature-imports\`
(\`src/features/billing/index.ts\` imports directly from \`src/features/auth/session.ts\`)
so \`guardrail check\` has something real to catch. It also declares \`moment\` as a
forbidden dependency (it's listed in package.json) to demonstrate the
forbidden-dependency checker.

## Enforced rules

These rules are checked deterministically by \`guardrail check\` — zero LLM calls, zero network access. A violation of any \`error\`/\`critical\` rule fails CI.

**critical**
- \`no-secrets\` (secret-scan) — No hardcoded credentials or API keys anywhere in the repo.

**error**
- \`no-cross-feature-imports\` (import-boundary) — Features must not import from each other directly; share code through packages/shared instead.

**warning**
- \`no-moment\` (forbidden-dependency) — Use date-fns instead of the deprecated moment.js.

"
`;

exports[`buildSyncOutputs golden files: examples/nextjs > produces the expected cursor rules for nextjs 1`] = `
[
  {
    "content": "---
description: Project overview and architecture for guardrail-example-nextjs
globs:
alwaysApply: true
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

# guardrail-example-nextjs

# Guardrail Example — Next.js

This fixture repo intentionally plants one violation of \`no-cross-feature-imports\`
(\`src/features/billing/index.ts\` imports directly from \`src/features/auth/session.ts\`)
so \`guardrail check\` has something real to catch. It also declares \`moment\` as a
forbidden dependency (it's listed in package.json) to demonstrate the
forbidden-dependency checker.

Run \`guardrail check\` to verify a change against this project's rules before committing.

",
    "relativePath": ".cursor/rules/000-project-overview.mdc",
  },
  {
    "content": "---
description: Features must not import from each other directly; share code through packages/shared instead.
globs: src/features/**/*.ts,src/features/**/*.tsx
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** error
**Enforcement:** \`import-boundary\` (checked by \`guardrail check\`)

Features must not import from each other directly; share code through packages/shared instead.

",
    "relativePath": ".cursor/rules/no-cross-feature-imports.mdc",
  },
  {
    "content": "---
description: Use date-fns instead of the deprecated moment.js.
globs: package.json
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** warning
**Enforcement:** \`forbidden-dependency\` (checked by \`guardrail check\`)

Use date-fns instead of the deprecated moment.js.

",
    "relativePath": ".cursor/rules/no-moment.mdc",
  },
  {
    "content": "---
description: No hardcoded credentials or API keys anywhere in the repo.
globs: **/*.ts,**/*.tsx,**/*.env*
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** critical
**Enforcement:** \`secret-scan\` (checked by \`guardrail check\`)

No hardcoded credentials or API keys anywhere in the repo.

",
    "relativePath": ".cursor/rules/no-secrets.mdc",
  },
]
`;

exports[`buildSyncOutputs golden files: examples/nextjs > produces the expected set of output files for nextjs 1`] = `
[
  ".cursor/rules/000-project-overview.mdc",
  ".cursor/rules/no-cross-feature-imports.mdc",
  ".cursor/rules/no-moment.mdc",
  ".cursor/rules/no-secrets.mdc",
  ".github/copilot-instructions.md",
  "AGENTS.md",
  "CLAUDE.md",
]
`;

exports[`buildSyncOutputs golden files: examples/sample > produces the expected AGENTS.md content for sample 1`] = `
"# sample-app

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

## Architecture & conventions

# Sample App

This is a minimal example constitution used in Guardrail's own test suite
and documentation. It demonstrates every enforcement type supported in
Phase 2/3: import boundaries, secret scanning, forbidden dependencies,
naming conventions, and file placement.

## Enforced rules

These rules are checked deterministically by \`guardrail check\` — zero LLM calls, zero network access. A violation of any \`error\`/\`critical\` rule fails CI.

**critical**
- \`no-secrets\` (secret-scan) — No hardcoded credentials or API keys anywhere in the repo.

**error**
- \`no-cross-feature-imports\` (import-boundary) — Features must not import from each other directly; share code through packages/shared instead.
- \`services-live-in-services\` (file-placement) — Service modules must live under src/services.

**warning**
- \`no-moment\` (forbidden-dependency) — Use date-fns instead of the deprecated moment.js.
- \`component-naming\` (naming) — React components use PascalCase filenames.

"
`;

exports[`buildSyncOutputs golden files: examples/sample > produces the expected CLAUDE.md content for sample 1`] = `
"# sample-app

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

## Architecture & conventions

# Sample App

This is a minimal example constitution used in Guardrail's own test suite
and documentation. It demonstrates every enforcement type supported in
Phase 2/3: import boundaries, secret scanning, forbidden dependencies,
naming conventions, and file placement.

## Enforced rules

These rules are checked deterministically by \`guardrail check\` — zero LLM calls, zero network access. A violation of any \`error\`/\`critical\` rule fails CI.

**critical**
- \`no-secrets\` (secret-scan) — No hardcoded credentials or API keys anywhere in the repo.

**error**
- \`no-cross-feature-imports\` (import-boundary) — Features must not import from each other directly; share code through packages/shared instead.
- \`services-live-in-services\` (file-placement) — Service modules must live under src/services.

**warning**
- \`no-moment\` (forbidden-dependency) — Use date-fns instead of the deprecated moment.js.
- \`component-naming\` (naming) — React components use PascalCase filenames.

"
`;

exports[`buildSyncOutputs golden files: examples/sample > produces the expected copilot-instructions.md content for sample 1`] = `
"# sample-app

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

## Architecture & conventions

# Sample App

This is a minimal example constitution used in Guardrail's own test suite
and documentation. It demonstrates every enforcement type supported in
Phase 2/3: import boundaries, secret scanning, forbidden dependencies,
naming conventions, and file placement.

## Enforced rules

These rules are checked deterministically by \`guardrail check\` — zero LLM calls, zero network access. A violation of any \`error\`/\`critical\` rule fails CI.

**critical**
- \`no-secrets\` (secret-scan) — No hardcoded credentials or API keys anywhere in the repo.

**error**
- \`no-cross-feature-imports\` (import-boundary) — Features must not import from each other directly; share code through packages/shared instead.
- \`services-live-in-services\` (file-placement) — Service modules must live under src/services.

**warning**
- \`no-moment\` (forbidden-dependency) — Use date-fns instead of the deprecated moment.js.
- \`component-naming\` (naming) — React components use PascalCase filenames.

"
`;

exports[`buildSyncOutputs golden files: examples/sample > produces the expected cursor rules for sample 1`] = `
[
  {
    "content": "---
description: Project overview and architecture for sample-app
globs:
alwaysApply: true
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

# sample-app

# Sample App

This is a minimal example constitution used in Guardrail's own test suite
and documentation. It demonstrates every enforcement type supported in
Phase 2/3: import boundaries, secret scanning, forbidden dependencies,
naming conventions, and file placement.

Run \`guardrail check\` to verify a change against this project's rules before committing.

",
    "relativePath": ".cursor/rules/000-project-overview.mdc",
  },
  {
    "content": "---
description: React components use PascalCase filenames.
globs: src/components/**/*.tsx
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** warning
**Enforcement:** \`naming\` (checked by \`guardrail check\`)

React components use PascalCase filenames.

",
    "relativePath": ".cursor/rules/component-naming.mdc",
  },
  {
    "content": "---
description: Features must not import from each other directly; share code through packages/shared instead.
globs: src/features/**
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** error
**Enforcement:** \`import-boundary\` (checked by \`guardrail check\`)

Features must not import from each other directly; share code through packages/shared instead.

",
    "relativePath": ".cursor/rules/no-cross-feature-imports.mdc",
  },
  {
    "content": "---
description: Use date-fns instead of the deprecated moment.js.
globs: package.json
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** warning
**Enforcement:** \`forbidden-dependency\` (checked by \`guardrail check\`)

Use date-fns instead of the deprecated moment.js.

",
    "relativePath": ".cursor/rules/no-moment.mdc",
  },
  {
    "content": "---
description: No hardcoded credentials or API keys anywhere in the repo.
globs: **
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** critical
**Enforcement:** \`secret-scan\` (checked by \`guardrail check\`)

No hardcoded credentials or API keys anywhere in the repo.

",
    "relativePath": ".cursor/rules/no-secrets.mdc",
  },
  {
    "content": "---
description: Service modules must live under src/services.
globs: **/*Service.ts
alwaysApply: false
---

> Generated by \`guardrail sync\` from \`.guardrail/constitution.md\`. Do not edit this file directly — edit the constitution and re-run \`guardrail sync\`.

**Severity:** error
**Enforcement:** \`file-placement\` (checked by \`guardrail check\`)

Service modules must live under src/services.

",
    "relativePath": ".cursor/rules/services-live-in-services.mdc",
  },
]
`;

exports[`buildSyncOutputs golden files: examples/sample > produces the expected set of output files for sample 1`] = `
[
  ".cursor/rules/000-project-overview.mdc",
  ".cursor/rules/component-naming.mdc",
  ".cursor/rules/no-cross-feature-imports.mdc",
  ".cursor/rules/no-moment.mdc",
  ".cursor/rules/no-secrets.mdc",
  ".cursor/rules/services-live-in-services.mdc",
  ".github/copilot-instructions.md",
  "AGENTS.md",
  "CLAUDE.md",
]
`;
